SONAR-driven refactoring on minor to info reported issues.